--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,9 +4,9 @@
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
 
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
+    <link rel="stylesheet" type="text/css" href="http://chenchuang.github.io/stylesheets/stylesheet.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="http://chenchuang.github.io/stylesheets/pygment_trac.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="http://chenchuang.github.io/stylesheets/print.css" media="print">
 
     <title>Chenchuang.github.io by ChenChuang</title>
   </head>
@@ -15,7 +15,7 @@
 
     <header>
       <div class="container">
-        <h1>Chenchuang.github.io</h1>
+        <a href="http://chenchuang.github.io"><h1>Chenchuang.github.io</h1></a>
         <h2></h2>
 
         <section id="downloads">
