--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
 
     <header>
       <div class="container">
-        <a href="http://chenchuang.github.io"><h1>Chenchuang.github.io</h1></a>
+        <h1><a href="http://chenchuang.github.io" class="header">Chenchuang.github.io</a></h1>
         <h2></h2>
 
         <section id="downloads">
