--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,14 +8,14 @@
     <link rel="stylesheet" type="text/css" href="http://chenchuang.github.io/stylesheets/pygment_trac.css" media="screen">
     <link rel="stylesheet" type="text/css" href="http://chenchuang.github.io/stylesheets/print.css" media="print">
 
-    <title>Chenchuang.github.io by ChenChuang</title>
+    <title>ChenChuang.github.io by ChenChuang</title>
   </head>
 
   <body>
 
     <header>
       <div class="container">
-        <h1><a href="http://chenchuang.github.io" class="a-h1">Chenchuang.github.io</a></h1>
+        <h1><a href="http://chenchuang.github.io" class="a-h1">ChenChuang.github.io</a></h1>
         <h2></h2>
 
         <section id="downloads">
