--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,7 +15,7 @@
 
     <header>
       <div class="container">
-        <h1><a href="http://chenchuang.github.io" class="a-h1">Chenchuang.github.io</a></h1>
+        <h1><a href="http://chenchuang.github.io" class="a-h1">ChenChuang.github.io</a></h1>
         <h2></h2>
 
         <section id="downloads">
