--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,8 @@
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
 
+    <link type="image/x-icon" rel="shortcut icon" href="http://chenchuang.github.io/images/blacktocat.png" />
+
     <link rel="stylesheet" type="text/css" href="http://chenchuang.github.io/stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="http://chenchuang.github.io/stylesheets/pygment_trac.css" media="screen">
     <link rel="stylesheet" type="text/css" href="http://chenchuang.github.io/stylesheets/print.css" media="print">
